--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login_page">
+    tools:context=".signUp_page">
+
 
     <ProgressBar
-        android:id="@+id/loginprogressbar"
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,8 +16,8 @@
         android:visibility="gone"/>
 
     <EditText
-        android:id="@+id/loginemail"
-        android:layout_width="match_parent"
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -27,8 +28,8 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/loginpassword"
-        android:layout_width="match_parent"
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -39,26 +40,13 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/loginbutton"
-        android:layout_width="118dp"
+        android:id="@+id/signUp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="218dp"
-        android:layout_marginEnd="16dp"
-        android:text="SIGN IN"
-        android:textColor="@color/colorAccent"/>
-
-    <TextView
-        android:id="@+id/registering"
-        android:layout_width="272dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="126dp"
-        android:text="haven't registered yet\nCLICK HERE TO REGISTER"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"/>
+        android:layout_marginBottom="190dp"
+        android:text="signup" />
 
 
 </RelativeLayout>
