--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -20,11 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="134dp"
+        android:layout_marginTop="93dp"
         android:ems="10"
         android:hint="email"
-        android:textColorHint="@color/colorPrimary"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/colorPrimary" />
 
     <EditText
         android:id="@+id/loginpassword"
@@ -32,11 +32,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="225dp"
+        android:layout_marginTop="173dp"
         android:ems="10"
-        android:textColorHint="@color/colorPrimary"
         android:hint="password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:textColorHint="@color/colorPrimary" />
 
     <Button
         android:id="@+id/loginbutton"
@@ -59,6 +59,15 @@
         android:text="haven't registered yet\nCLICK HERE TO REGISTER"
         android:gravity="center"
         android:textColor="@color/colorPrimary"/>
+
+    <TextView
+        android:id="@+id/forgetpassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:text="forget password??" />
 
 
 </RelativeLayout>
