--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Timeline">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyler_menu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </RelativeLayout>
