--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorsky">#00bfff</color>
+    <color name="lightgrey">#D3D3D3</color>
+    <color name="darkgrey">#A9A9A9</color>
+
 </resources>
