--- a/app/src/main/res/layout/activity_species_list.xml
+++ b/app/src/main/res/layout/activity_species_list.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".SpeciesList">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_species"
+        android:scrollbars="vertical"/>
+
 </android.support.constraint.ConstraintLayout>
